updated changelog and Restructure issues
git-svn-id: https://svn.epidata.dk/svn/Docs@7 15330fb7-a709-4ce3-a77c-cbf84e4b1a87

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -55,4 +55,8 @@ Build 147 - 3. Sept. 2008:
 9: Added: New option /NOTOT for CIPlot = do not display total (including 95% CI lines).
 10: Updated language file.
 
+Build 148 - 4. Sept. 2008:
+1: New (Mantis 286): Add multiple variable support for Boxplot.
+2: Added: New /NM option for new Boxplot implementation.
+
 Version 2.0 Rel.6
