--- a/Changelog.txt
+++ b/Changelog.txt
@@ -94,3 +94,6 @@ Build 151 - 13. Oct. 2008:
 1: Fix (Mantis 300): EpiCurve crashed with wrong order of variables. Added a "No Data" error.
 2: Fix (Mantis 301): Missing left-axis title added - "Count"
 3: Fix (Mantis 305): Reading value labels from external REC file caused the program to save an incorrect CHK file. Labeling for label value set changed to NOT include the keyword "FROM".
+4: Change: Savedata and SavePGM save dialogs now defaults to current dir.
+5: Change: Missingvalue / Labelvalue now accepts multiple variables
+6: Fix: Tables using /OA where a variable has more than 2 outcomes for 2x2 statistics cause problem to crash.
