--- a/Changelog.txt
+++ b/Changelog.txt
@@ -112,3 +112,9 @@ Build 159 - 9. Dec. 2008:
 9: Change: round(...) now accepts both 1 and 2 parameters.
 10: Added: Prototype of new Graph/SPC dialog.
 11: Temporary fix: Saving file automatically resets all positional paramters for .REC files.
+
+Version 2.2 Rel. 0
+Build 166 - 22 Apr. 2009
+1: Change: SET SPC TEST => SPC TESTLIMIT
+2: Change: Excluded points in GChart no longer shown. Renumbers x-axis if no x-axis assigned. Footnote added to table if excluded used in GChart.
+3: Fix: Correctly remove LCL column in GChart if no data is shown.
