--- a/Changelog.txt
+++ b/Changelog.txt
@@ -104,6 +104,7 @@ Build 159 - 9. Dec. 2008:
 1: Added: /Q to correlate
 2: Added: /Q to regress
 3: Fixed: /KEY was not working with MERGE and APPEND
+4: Change: Changed the way "RESULT CLEAR" clears results and globals.
 4: Added: SPC commands to Main Menu.
 5: New: Create seperate sub-menu for SPC graph on main form.
 6: Unified common SPC checks in own procedure.
